Remove ALU old code

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -60,3 +60,6 @@ jobs:
     - name: Run Iau Tests
       run: |
         make iau_tests
+    - name: Run ALU Tests
+      run: |
+        make alu_tests
