--- a/.github/workflows/run_ghdl_tests.yml
+++ b/.github/workflows/run_ghdl_tests.yml
@@ -29,7 +29,7 @@ jobs:
         cd ghdl
         git checkout v0.37.0
         ./configure --prefix=/usr/local
-        sudo make -j4
+        sudo make GNATMAKE="gnatmake -j4"
         sudo make install
         cd ..
     - name: GHDL version
