Add more status register testing

--- a/.github/workflows/run_ghdl_tests.yml
+++ b/.github/workflows/run_ghdl_tests.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Setup GHDL
       run: |
         pwd
+        cat /proc/cpuinfo
         sudo apt update
         sudo apt install -y gnat
         cd ..
