--- a/.github/workflows/run_ghdl_tests.yml
+++ b/.github/workflows/run_ghdl_tests.yml
@@ -76,3 +76,7 @@ jobs:
       run: |
         make cpu_data_move_tests | tee cpu_data_move_test_result.txt
         cat cpu_data_move_test_result.txt | grep -c -i -E "Alert|error|failed" | grep -q "^0$"
+    - name: Run CPU Flow Skip Instruction Tests
+      run: |
+        make cpu_flow_skip_tests | tee cpu_flow_skip_test_result.txt
+        cat cpu_flow_skip_test_result.txt | grep -c -i -E "Alert|error|failed" | grep -q "^0$"
