--- a/.github/workflows/run_ghdl_tests.yml
+++ b/.github/workflows/run_ghdl_tests.yml
@@ -70,13 +70,21 @@ jobs:
         cat alu_test_result.txt | grep -c -i -E "Alert|error|failed" | grep -q "^0$"
     - name: Run CPU ALU Instruction Tests
       run: |
-        make cpu_alu_tests | tee cpu_alu_test_result.txt
-        cat cpu_alu_test_result.txt | grep -c -i -E "Alert|error|failed" | grep -q "^0$"
+        make cpu_alu_tests | tee cpu_alu_tests.txt
+        cat cpu_alu_tests.txt | grep -c -i -E "Alert|error|failed" | grep -q "^0$"
     - name: Run CPU Data Move Instruction Tests
       run: |
-        make cpu_data_move_tests | tee cpu_data_move_test_result.txt
-        cat cpu_data_move_test_result.txt | grep -c -i -E "Alert|error|failed" | grep -q "^0$"
+        make cpu_data_move_tests | tee cpu_data_move_tests.txt
+        cat cpu_data_move_tests.txt | grep -c -i -E "Alert|error|failed" | grep -q "^0$"
     - name: Run CPU Flow Skip Instruction Tests
       run: |
-        make cpu_flow_skip_tests | tee cpu_flow_skip_test_result.txt
-        cat cpu_flow_skip_test_result.txt | grep -c -i -E "Alert|error|failed" | grep -q "^0$"
+        make cpu_flow_skip_tests | tee cpu_flow_skip_tests.txt
+        cat cpu_flow_skip_tests.txt | grep -c -i -E "Alert|error|failed" | grep -q "^0$"
+    - name: Run CPU Flow Cond Branch Instruction Tests
+      run: |
+        make cpu_flow_cond_branch_tests | tee cpu_flow_cond_branch_tests.txt
+        cat cpu_flow_cond_branch_tests.txt | grep -c -i -E "Alert|error|failed" | grep -q "^0$"
+    - name: Run CPU Flow Uncond Branch Instruction Tests
+      run: |
+        make cpu_flow_uncond_branch_tests | tee cpu_flow_uncond_branch_tests.txt
+        cat cpu_flow_uncond_branch_tests.txt | grep -c -i -E "Alert|error|failed" | grep -q "^0$"
